--- a/src/features/CreateProfile/FormViews.scss
+++ b/src/features/CreateProfile/FormViews.scss
@@ -33,6 +33,7 @@ body {
             .MuiOutlinedInput-root {
                 width: 350px;
                 margin: 15px;
+                align-self: center;
             }
             .MuiOutlinedInput-root:hover {
                 & > fieldset {
