--- a/src/features/CreateProfile/FormViews.scss
+++ b/src/features/CreateProfile/FormViews.scss
@@ -12,7 +12,7 @@ body {
     @include align;
     flex-wrap: wrap;
     background-color: #E2E2E2;
-    height: 100%;
+    height: 100vh;
     .sections {
         display: flex;
         width: 55%;
